tests/ui/error-codes/E0430.stderr
error[E0252]: the name `fmt` is defined multiple times
  --> $DIR/E0430.rs:1:22
   |
LL | use std::fmt::{self, self};
   |                ----  ^^^^ `fmt` reimported here
   |                |
   |                previous import of the module `fmt` here
   |
   = note: `fmt` must be defined only once in the type namespace of this module

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0252`.
