tests/ui/error-codes/E0430.rs
use std::fmt::{self, self}; //~ ERROR the name `fmt` is defined multiple times

fn main () {
}
